interpreter/asm2/gen/assembler_parser.go
// Code generated from /Users/bytedance/go/src/github.com/ycl2018/pie-go/interpreter/asm2/Assembler.g4 by ANTLR 4.13.2. DO NOT EDIT.

package gen // Assembler
import (
	"fmt"
	"strconv"
  	"sync"

	"github.com/antlr4-go/antlr/v4"
)



type AsmGenerator interface {
    Gen(instrs ...antlr.Token)
    DefineConst(tag string, value string)
    DefineStruct(name string, fields []antlr.Token)
    CheckForUnresolvedReferences()
    DefineFunction(id antlr.Token, nargs, nlocals int)
    DefineDataSize(n int)
    DefineLabel(id antlr.Token)
    DefineFuncStruct(funcName antlr.Token, structName string, fields []antlr.Token)
}


// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}


type AssemblerParser struct {
	*antlr.BaseParser
	// Grammar author supplied members of the instance struct
	AsmGenerator
}

var AssemblerParserStaticData struct {
  once                   sync.Once
  serializedATN          []int32
  LiteralNames           []string
  SymbolicNames          []string
  RuleNames              []string
  PredictionContextCache *antlr.PredictionContextCache
  atn                    *antlr.ATN
  decisionToDFA          []*antlr.DFA
}

func assemblerParserInit() {
  staticData := &AssemblerParserStaticData
  staticData.LiteralNames = []string{
    "", "'.globals'", "'.consts'", "'{'", "','", "'}'", "'.def'", "':'", 
    "'args'", "'='", "'locals'", "'f'", "'s'", "'struct'",
  }
  staticData.SymbolicNames = []string{
    "", "", "", "", "", "", "", "", "", "", "", "TAG_FLOAT", "TAG_STRING", 
    "TAG_STUCT", "REG", "ID", "FUNC", "INT", "CHAR", "STRING", "FLOAT", 
    "WS", "NEWLINE",
  }
  staticData.RuleNames = []string{
    "program", "globals", "constantPool", "constantPoolEntry", "structDecl", 
    "functionDeclaration", "instr", "operand", "label",
  }
  staticData.PredictionContextCache = antlr.NewPredictionContextCache()
  deserializer := antlr.NewATNDeserializer(nil)
  staticData.atn = deserializer.Deserialize(staticData.serializedATN)
  atn := staticData.atn
  staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
  decisionToDFA := staticData.decisionToDFA
  for index, state := range atn.DecisionToState {
    decisionToDFA[index] = antlr.NewDFA(state, index)
  }
}

// AssemblerParserInit initializes any static state used to implement AssemblerParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewAssemblerParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func AssemblerParserInit() {
  staticData := &AssemblerParserStaticData
  staticData.once.Do(assemblerParserInit)
}

// NewAssemblerParser produces a new parser instance for the optional input antlr.TokenStream.
func NewAssemblerParser(input antlr.TokenStream) *AssemblerParser {
	AssemblerParserInit()
	this := new(AssemblerParser)
	this.BaseParser = antlr.NewBaseParser(input)
  staticData := &AssemblerParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "Assembler.g4"

	return this
}


// AssemblerParser tokens.
const (
	AssemblerParserEOF = antlr.TokenEOF
	AssemblerParserT__0 = 1
	AssemblerParserT__1 = 2
	AssemblerParserT__2 = 3
	AssemblerParserT__3 = 4
	AssemblerParserT__4 = 5
	AssemblerParserT__5 = 6
	AssemblerParserT__6 = 7
	AssemblerParserT__7 = 8
	AssemblerParserT__8 = 9
	AssemblerParserT__9 = 10
	AssemblerParserTAG_FLOAT = 11
	AssemblerParserTAG_STRING = 12
	AssemblerParserTAG_STUCT = 13
	AssemblerParserREG = 14
	AssemblerParserID = 15
	AssemblerParserFUNC = 16
	AssemblerParserINT = 17
	AssemblerParserCHAR = 18
	AssemblerParserSTRING = 19
	AssemblerParserFLOAT = 20
	AssemblerParserWS = 21
	AssemblerParserNEWLINE = 22
)

// AssemblerParser rules.
const (
	AssemblerParserRULE_program = 0
	AssemblerParserRULE_globals = 1
	AssemblerParserRULE_constantPool = 2
	AssemblerParserRULE_constantPoolEntry = 3
	AssemblerParserRULE_structDecl = 4
	AssemblerParserRULE_functionDeclaration = 5
	AssemblerParserRULE_instr = 6
	AssemblerParserRULE_operand = 7
	AssemblerParserRULE_label = 8
)

// IProgramContext is an interface to support dynamic dispatch.
type IProgramContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Globals() IGlobalsContext
	ConstantPool() IConstantPoolContext
	AllFunctionDeclaration() []IFunctionDeclarationContext
	FunctionDeclaration(i int) IFunctionDeclarationContext
	AllInstr() []IInstrContext
	Instr(i int) IInstrContext
	AllLabel() []ILabelContext
	Label(i int) ILabelContext
	AllNEWLINE() []antlr.TerminalNode
	NEWLINE(i int) antlr.TerminalNode

	// IsProgramContext differentiates from other interfaces.
	IsProgramContext()
}

type ProgramContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgramContext() *ProgramContext {
	var p = new(ProgramContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = AssemblerParserRULE_program
	return p
}

func InitEmptyProgramContext(p *ProgramContext)  {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = AssemblerParserRULE_program
}

func (*ProgramContext) IsProgramContext() {}

func NewProgramContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgramContext {
	var p = new(ProgramContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = AssemblerParserRULE_program

	return p
}

func (s *ProgramContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgramContext) Globals() IGlobalsContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IGlobalsContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IGlobalsContext)
}

func (s *ProgramContext) ConstantPool() IConstantPoolContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IConstantPoolContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IConstantPoolContext)
}

func (s *ProgramContext) AllFunctionDeclaration() []IFunctionDeclarationContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IFunctionDeclarationContext); ok {
			len++
		}
	}

	tst := make([]IFunctionDeclarationContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IFunctionDeclarationContext); ok {
			tst[i] = t.(IFunctionDeclarationContext)
			i++
		}
	}

	return tst
}

func (s *ProgramContext) FunctionDeclaration(i int) IFunctionDeclarationContext {
	var t antlr.RuleContext;
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFunctionDeclarationContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext);
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFunctionDeclarationContext)
}

func (s *ProgramContext) AllInstr() []IInstrContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IInstrContext); ok {
			len++
		}
	}

	tst := make([]IInstrContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IInstrContext); ok {
			tst[i] = t.(IInstrContext)
			i++
		}
	}

	return tst
}

func (s *ProgramContext) Instr(i int) IInstrContext {
	var t antlr.RuleContext;
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IInstrContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext);
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IInstrContext)
}

func (s *ProgramContext) AllLabel() []ILabelContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ILabelContext); ok {
			len++
		}
	}

	tst := make([]ILabelContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ILabelContext); ok {
			tst[i] = t.(ILabelContext)
			i++
		}
	}

	return tst
}

func (s *ProgramContext) Label(i int) ILabelContext {
	var t antlr.RuleContext;
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ILabelContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext);
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ILabelContext)
}

func (s *ProgramContext) AllNEWLINE() []antlr.TerminalNode {
	return s.GetTokens(AssemblerParserNEWLINE)
}

func (s *ProgramContext) NEWLINE(i int) antlr.TerminalNode {
	return s.GetToken(AssemblerParserNEWLINE, i)
}

func (s *ProgramContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgramContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *ProgramContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case AssemblerVisitor:
		return t.VisitProgram(s)

	default:
		return t.VisitChildren(s)
	}
}




func (p *AssemblerParser) Program() (localctx IProgramContext) {
	localctx = NewProgramContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, AssemblerParserRULE_program)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(19)
	p.GetErrorHandler().Sync(p)


	if p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 0, p.GetParserRuleContext()) == 1 {
		{
			p.SetState(18)
			p.Globals()
		}

		} else if p.HasError() { // JIM
			goto errorExit
	}
	p.SetState(22)
	p.GetErrorHandler().Sync(p)


	if p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 1, p.GetParserRuleContext()) == 1 {
		{
			p.SetState(21)
			p.ConstantPool()
		}

		} else if p.HasError() { // JIM
			goto errorExit
	}
	p.SetState(28)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)


	for ok := true; ok; ok = ((int64(_la) & ^0x3f) == 0 && ((int64(1) << _la) & 4227136) != 0) {
		p.SetState(28)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}

		switch p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 2, p.GetParserRuleContext()) {
		case 1:
			{
				p.SetState(24)
				p.FunctionDeclaration()
			}


		case 2:
			{
				p.SetState(25)
				p.Instr()
			}


		case 3:
			{
				p.SetState(26)
				p.Label()
			}


		case 4:
			{
				p.SetState(27)
				p.Match(AssemblerParserNEWLINE)
				if p.HasError() {
						// Recognition error - abort rule
						goto errorExit
				}
			}

		case antlr.ATNInvalidAltNumber:
			goto errorExit
		}

		p.SetState(30)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
	    	goto errorExit
	    }
		_la = p.GetTokenStream().LA(1)
	}
	p.CheckForUnresolvedReferences()



errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}


// IGlobalsContext is an interface to support dynamic dispatch.
type IGlobalsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Get_INT returns the _INT token.
	Get_INT() antlr.Token 


	// Set_INT sets the _INT token.
	Set_INT(antlr.Token) 


	// Getter signatures
	INT() antlr.TerminalNode
	AllNEWLINE() []antlr.TerminalNode
	NEWLINE(i int) antlr.TerminalNode

	// IsGlobalsContext differentiates from other interfaces.
	IsGlobalsContext()
}

type GlobalsContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
	_INT antlr.Token
}

func NewEmptyGlobalsContext() *GlobalsContext {
	var p = new(GlobalsContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = AssemblerParserRULE_globals
	return p
}

func InitEmptyGlobalsContext(p *GlobalsContext)  {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = AssemblerParserRULE_globals
}

func (*GlobalsContext) IsGlobalsContext() {}

func NewGlobalsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *GlobalsContext {
	var p = new(GlobalsContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = AssemblerParserRULE_globals

	return p
}

func (s *GlobalsContext) GetParser() antlr.Parser { return s.parser }

func (s *GlobalsContext) Get_INT() antlr.Token { return s._INT }


func (s *GlobalsContext) Set_INT(v antlr.Token) { s._INT = v }


func (s *GlobalsContext) INT() antlr.TerminalNode {
	return s.GetToken(AssemblerParserINT, 0)
}

func (s *GlobalsContext) AllNEWLINE() []antlr.TerminalNode {
	return s.GetTokens(AssemblerParserNEWLINE)
}

func (s *GlobalsContext) NEWLINE(i int) antlr.TerminalNode {
	return s.GetToken(AssemblerParserNEWLINE, i)
}

func (s *GlobalsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *GlobalsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *GlobalsContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case AssemblerVisitor:
		return t.VisitGlobals(s)

	default:
		return t.VisitChildren(s)
	}
}




func (p *AssemblerParser) Globals() (localctx IGlobalsContext) {
	localctx = NewGlobalsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, AssemblerParserRULE_globals)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(37)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)


	for _la == AssemblerParserNEWLINE {
		{
			p.SetState(34)
			p.Match(AssemblerParserNEWLINE)
			if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
			}
		}


		p.SetState(39)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
	    	goto errorExit
	    }
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(40)
		p.Match(AssemblerParserT__0)
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}
	{
		p.SetState(41)

		var _m = p.Match(AssemblerParserINT)

		localctx.(*GlobalsContext)._INT = _m
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}
	{
		p.SetState(42)
		p.Match(AssemblerParserNEWLINE)
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}
	p.DefineDataSize((func() int { if localctx.(*GlobalsContext).Get_INT() == nil { return 0 } else { i, _ := strconv.Atoi(localctx.(*GlobalsContext).Get_INT().GetText()); return i }}()))



errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}


// IConstantPoolContext is an interface to support dynamic dispatch.
type IConstantPoolContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetCount returns the count token.
	GetCount() antlr.Token 


	// SetCount sets the count token.
	SetCount(antlr.Token) 


	// Get_constantPoolEntry returns the _constantPoolEntry rule contexts.
	Get_constantPoolEntry() IConstantPoolEntryContext


	// Set_constantPoolEntry sets the _constantPoolEntry rule contexts.
	Set_constantPoolEntry(IConstantPoolEntryContext)


	// GetEntries returns the entries rule context list.
	GetEntries() []IConstantPoolEntryContext


	// SetEntries sets the entries rule context list.
	SetEntries([]IConstantPoolEntryContext) 


	// Getter signatures
	AllNEWLINE() []antlr.TerminalNode
	NEWLINE(i int) antlr.TerminalNode
	INT() antlr.TerminalNode
	AllConstantPoolEntry() []IConstantPoolEntryContext
	ConstantPoolEntry(i int) IConstantPoolEntryContext

	// IsConstantPoolContext differentiates from other interfaces.
	IsConstantPoolContext()
}

type ConstantPoolContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
	count antlr.Token
	_constantPoolEntry IConstantPoolEntryContext 
	entries []IConstantPoolEntryContext
}

func NewEmptyConstantPoolContext() *ConstantPoolContext {
	var p = new(ConstantPoolContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = AssemblerParserRULE_constantPool
	return p
}

func InitEmptyConstantPoolContext(p *ConstantPoolContext)  {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = AssemblerParserRULE_constantPool
}

func (*ConstantPoolContext) IsConstantPoolContext() {}

func NewConstantPoolContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ConstantPoolContext {
	var p = new(ConstantPoolContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = AssemblerParserRULE_constantPool

	return p
}

func (s *ConstantPoolContext) GetParser() antlr.Parser { return s.parser }

func (s *ConstantPoolContext) GetCount() antlr.Token { return s.count }


func (s *ConstantPoolContext) SetCount(v antlr.Token) { s.count = v }


func (s *ConstantPoolContext) Get_constantPoolEntry() IConstantPoolEntryContext { return s._constantPoolEntry }


func (s *ConstantPoolContext) Set_constantPoolEntry(v IConstantPoolEntryContext) { s._constantPoolEntry = v }


func (s *ConstantPoolContext) GetEntries() []IConstantPoolEntryContext { return s.entries }


func (s *ConstantPoolContext) SetEntries(v []IConstantPoolEntryContext) { s.entries = v }


func (s *ConstantPoolContext) AllNEWLINE() []antlr.TerminalNode {
	return s.GetTokens(AssemblerParserNEWLINE)
}

func (s *ConstantPoolContext) NEWLINE(i int) antlr.TerminalNode {
	return s.GetToken(AssemblerParserNEWLINE, i)
}

func (s *ConstantPoolContext) INT() antlr.TerminalNode {
	return s.GetToken(AssemblerParserINT, 0)
}

func (s *ConstantPoolContext) AllConstantPoolEntry() []IConstantPoolEntryContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IConstantPoolEntryContext); ok {
			len++
		}
	}

	tst := make([]IConstantPoolEntryContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IConstantPoolEntryContext); ok {
			tst[i] = t.(IConstantPoolEntryContext)
			i++
		}
	}

	return tst
}

func (s *ConstantPoolContext) ConstantPoolEntry(i int) IConstantPoolEntryContext {
	var t antlr.RuleContext;
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IConstantPoolEntryContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext);
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IConstantPoolEntryContext)
}

func (s *ConstantPoolContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ConstantPoolContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *ConstantPoolContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case AssemblerVisitor:
		return t.VisitConstantPool(s)

	default:
		return t.VisitChildren(s)
	}
}




func (p *AssemblerParser) ConstantPool() (localctx IConstantPoolContext) {
	localctx = NewConstantPoolContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, AssemblerParserRULE_constantPool)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(48)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)


	for _la == AssemblerParserNEWLINE {
		{
			p.SetState(45)
			p.Match(AssemblerParserNEWLINE)
			if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
			}
		}


		p.SetState(50)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
	    	goto errorExit
	    }
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(51)
		p.Match(AssemblerParserT__1)
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}
	{
		p.SetState(52)

		var _m = p.Match(AssemblerParserINT)

		localctx.(*ConstantPoolContext).count = _m
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}
	{
		p.SetState(53)
		p.Match(AssemblerParserNEWLINE)
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}
	p.SetState(57)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)


	for ((int64(_la) & ^0x3f) == 0 && ((int64(1) << _la) & 14336) != 0) {
		{
			p.SetState(54)

			var _x = p.ConstantPoolEntry()


			localctx.(*ConstantPoolContext)._constantPoolEntry = _x
		}
		localctx.(*ConstantPoolContext).entries = append(localctx.(*ConstantPoolContext).entries, localctx.(*ConstantPoolContext)._constantPoolEntry)


		p.SetState(59)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
	    	goto errorExit
	    }
		_la = p.GetTokenStream().LA(1)
	}



errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}


// IConstantPoolEntryContext is an interface to support dynamic dispatch.
type IConstantPoolEntryContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetTag returns the tag token.
	GetTag() antlr.Token 

	// GetValue returns the value token.
	GetValue() antlr.Token 

	// GetName returns the name token.
	GetName() antlr.Token 

	// Get_ID returns the _ID token.
	Get_ID() antlr.Token 


	// SetTag sets the tag token.
	SetTag(antlr.Token) 

	// SetValue sets the value token.
	SetValue(antlr.Token) 

	// SetName sets the name token.
	SetName(antlr.Token) 

	// Set_ID sets the _ID token.
	Set_ID(antlr.Token) 


	// GetFields returns the fields token list.
	GetFields() []antlr.Token


	// SetFields sets the fields token list.
	SetFields([]antlr.Token)


	// Getter signatures
	TAG_FLOAT() antlr.TerminalNode
	FLOAT() antlr.TerminalNode
	TAG_STRING() antlr.TerminalNode
	STRING() antlr.TerminalNode
	TAG_STUCT() antlr.TerminalNode
	AllID() []antlr.TerminalNode
	ID(i int) antlr.TerminalNode

	// IsConstantPoolEntryContext differentiates from other interfaces.
	IsConstantPoolEntryContext()
}

type ConstantPoolEntryContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
	tag antlr.Token
	value antlr.Token
	name antlr.Token
	_ID antlr.Token
	fields []antlr.Token
}

func NewEmptyConstantPoolEntryContext() *ConstantPoolEntryContext {
	var p = new(ConstantPoolEntryContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = AssemblerParserRULE_constantPoolEntry
	return p
}

func InitEmptyConstantPoolEntryContext(p *ConstantPoolEntryContext)  {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = AssemblerParserRULE_constantPoolEntry
}

func (*ConstantPoolEntryContext) IsConstantPoolEntryContext() {}

func NewConstantPoolEntryContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ConstantPoolEntryContext {
	var p = new(ConstantPoolEntryContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = AssemblerParserRULE_constantPoolEntry

	return p
}

func (s *ConstantPoolEntryContext) GetParser() antlr.Parser { return s.parser }

func (s *ConstantPoolEntryContext) GetTag() antlr.Token { return s.tag }

func (s *ConstantPoolEntryContext) GetValue() antlr.Token { return s.value }

func (s *ConstantPoolEntryContext) GetName() antlr.Token { return s.name }

func (s *ConstantPoolEntryContext) Get_ID() antlr.Token { return s._ID }


func (s *ConstantPoolEntryContext) SetTag(v antlr.Token) { s.tag = v }

func (s *ConstantPoolEntryContext) SetValue(v antlr.Token) { s.value = v }

func (s *ConstantPoolEntryContext) SetName(v antlr.Token) { s.name = v }

func (s *ConstantPoolEntryContext) Set_ID(v antlr.Token) { s._ID = v }


func (s *ConstantPoolEntryContext) GetFields() []antlr.Token { return s.fields }


func (s *ConstantPoolEntryContext) SetFields(v []antlr.Token) { s.fields = v }


func (s *ConstantPoolEntryContext) TAG_FLOAT() antlr.TerminalNode {
	return s.GetToken(AssemblerParserTAG_FLOAT, 0)
}

func (s *ConstantPoolEntryContext) FLOAT() antlr.TerminalNode {
	return s.GetToken(AssemblerParserFLOAT, 0)
}

func (s *ConstantPoolEntryContext) TAG_STRING() antlr.TerminalNode {
	return s.GetToken(AssemblerParserTAG_STRING, 0)
}

func (s *ConstantPoolEntryContext) STRING() antlr.TerminalNode {
	return s.GetToken(AssemblerParserSTRING, 0)
}

func (s *ConstantPoolEntryContext) TAG_STUCT() antlr.TerminalNode {
	return s.GetToken(AssemblerParserTAG_STUCT, 0)
}

func (s *ConstantPoolEntryContext) AllID() []antlr.TerminalNode {
	return s.GetTokens(AssemblerParserID)
}

func (s *ConstantPoolEntryContext) ID(i int) antlr.TerminalNode {
	return s.GetToken(AssemblerParserID, i)
}

func (s *ConstantPoolEntryContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ConstantPoolEntryContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *ConstantPoolEntryContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case AssemblerVisitor:
		return t.VisitConstantPoolEntry(s)

	default:
		return t.VisitChildren(s)
	}
}




func (p *AssemblerParser) ConstantPoolEntry() (localctx IConstantPoolEntryContext) {
	localctx = NewConstantPoolEntryContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, AssemblerParserRULE_constantPoolEntry)
	var _la int

	p.SetState(81)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case AssemblerParserTAG_FLOAT:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(60)

			var _m = p.Match(AssemblerParserTAG_FLOAT)
